--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,20 @@ main{
 
 section {
   background-image: url("../assets/site/mapblue.jpg");
-  max-width: 75%;
+  width: 70%;
 }
 
 .character__container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .character {
   text-align: center;
   justify-content: center;
-  width: 80px;
+  width: 10%;
   padding: 1%;
 }
 
@@ -36,15 +37,20 @@ section {
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.selectedCharacter__highlight{
+  color:rgb(4, 68, 123);
+}
+
 .character > img {
   padding: 5%;
-  width: 80px;
+  width: 90%;
 }
 
 .name {
   padding: 1%;
   margin: 1%;
 }
+
 .name:hover {
   cursor: pointer;
   font-style: oblique;
@@ -52,7 +58,7 @@ section {
 }
 
 aside {
-  min-width: 300px;
+  width: 30vw;
   background-color: rgb(58, 58, 58);
   text-align: center;
   color: white;
@@ -71,13 +77,14 @@ aside>h1 {
 }
 
 .selected__image {
-  width: 40%;
+  width: 80%;
 }
 
 .selected__details {
   position: relative;
   display: flex;
   flex-direction: row;
+  margin-bottom: 20%;
 }
 
 .selected__name {
@@ -89,29 +96,25 @@ aside>h1 {
 }
 
 .selected__house {
-  /* display: inline-block; */
   position: absolute;
   left: 80%;
   margin-top: 5%;
-  /*border: solid 1px black;
-   width: 100px;
-  height: 100%; */
 }
 
 .selected__description {
-  position: absolute;
-  top: 300px;
   font-size: 1.2rem;
   text-align: left;
   padding: 5%;
+  margin-top: 10%;
 }
 
 .navigation {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   position: absolute;
-  top: 700px;
-  width: 100%;
+  bottom: 1rem;
+  width: 85%;
 }
 
 .search__button {
@@ -146,3 +149,58 @@ aside>h1 {
   font-size: 1rem;
   padding-left: 2%;
 }
+
+@media only screen and (max-width:1200px) {
+  .character {
+    width: 14%;
+  }
+}
+
+@media only screen and (max-width:768px) {
+  section {
+    width: 50vw;
+  }
+
+  aside {
+    width: 50vw;
+  }
+
+  .character {
+    width: 23%;
+  }
+}
+
+@media only screen and (max-width:600px) {
+  main {
+    display: block;
+    width: 100vw;
+  }
+
+  section {
+    display: block;
+    position: absolute;
+    top: 50rem;
+    width: 94vw;
+  }
+
+  aside {
+    /*display: block;
+    flex: 100%;*/
+    height: 50rem;
+    position: absolute;
+    top: 0;
+    width: 94vw;
+  }
+
+  .character {
+    width: 25%;
+  }
+
+  .navigation {
+    display: flex;
+    position: absolute;
+    left: 0;
+    bottom: 1rem;
+  }
+}
+
